@@ -4,6 +4,7 @@ Revision history for libfq
 	- support columns defined with "CHARACTER SET OCTETS"
 	- support for INT128 datatype (Firebird 4 and later)
 	- support TIME WITH TIME ZONE and TIMESTAMP WITH TIME ZONE datatypes
+	- Add constant FBCONN_MAX_PARAMS
 
 0.5.1   2024-04-27
 	- Tighten up tuple row/column bounds checking
